fixed cancel btn visibility

--- a/src/components/filter-item-dropdown/FilterItemDropdown.scss
+++ b/src/components/filter-item-dropdown/FilterItemDropdown.scss
@@ -27,7 +27,14 @@
     }
 }
 
-
 .selected {
     border: 2px solid #f44336;
+}
+
+.control__cancel {
+    visibility: hidden;
+}
+
+.visible {
+    visibility: visible;
 }
